[package]
name = "milstrikelive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
parking_lot = "0.11"

log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1"
async-trait = "0.1"
rand = "0.8"

stagebridge = { path = "../stagebridge" }

msmacros = { path = "../msmacros" }
